<resources>
    <string name="app_name">GitRepoSearchApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Search Repo</string>
    <string name="second_fragment_label">Repo Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_result">No result available to show,please try different search.</string>
    <string name="label_id">Id</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="contribut_label">Contribute</string>
    <string name="label_count">Count</string>
    <string name="label_contributors">Contributors</string>
    <string name="project_link">Project Link</string>
    <string name="search">Search</string>
    <string name="n_a">N/A</string>
</resources>