<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repoDetails"
            type="com.sample.gitreposearchapp.model.Items" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RepoDetailsFragment">

            <TextView
                android:id="@+id/tvNoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_id"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRepoNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.valueOf(repoDetails.id)}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvNoLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tvLabelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@id/tvRepoNo" />

            <TextView
                android:id="@+id/tvRepoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{repoDetails.name}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelName"
                tools:text="@tools:sample/full_names" />
            <TextView
                android:id="@+id/tvLabelProjectLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/project_link"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@id/tvRepoName" />
            <TextView
                android:id="@+id/tvProjectLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@{repoDetails.html_url}"
                android:textColor="?android:attr/textColorLinkInverse"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@id/tvLabelProjectLink" />

            <TextView
                android:id="@+id/tvLabelDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@id/tvProjectLink" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{repoDetails.description}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelDescription"
                tools:text="@tools:sample/lorem/random" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLeft"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRight"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="16dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvContributors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/glLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelContributors"
                tools:itemCount="10"
                tools:listitem="@layout/item_contributors_layout" />

            <TextView
                android:id="@+id/tvLabelContributors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_contributors"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/glRight"
                app:layout_constraintStart_toStartOf="@+id/glLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>